--- a/package.json
+++ b/package.json
@@ -1,15 +1,28 @@
 {
   "name": "pokemon-card-component",
   "version": "1.0.6",
-  "description": "Componente web de tarjetas Pokémon",
+  "description": "Componente web personalizado para mostrar tarjetas de Pokémon con información detallada: nombre, altura, peso, imagen y tipos. Ideal para portafolios, demos y proyectos educativos.",
   "main": "src/index.js",
   "keywords": [
     "pokemon",
     "webcomponent",
     "custom-element",
     "cards",
-    "pokedex"
+    "pokedex",
+    "tailwindcss",
+    "javascript"
   ],
   "author": "PabloGarciaJC",
-  "license": "MIT"
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/PabloGarciaJC/landing-page-async-javascript.git"
+  },
+  "bugs": {
+    "url": "https://github.com/PabloGarciaJC/landing-page-async-javascript/issues"
+  },
+  "homepage": "https://pablogarciajc.com/#readme",
+  "scripts": {
+    "start": "node src/index.js"
+  }
 }
